@@ -45,7 +45,7 @@
 
         <server.args>-Dprojectdir=${project.build.directory}</server.args>
         <surefire.argline></surefire.argline>
-        <jvm.args>-server -Xms64m -Xmx1024m -XX:MaxPermSize=512m ${server.args}</jvm.args>
+        <jvm.args>-server -Xms64m -Xmx1024m -XX:MaxMetaspaceSize=512m ${server.args}</jvm.args>
         <jvm.args.debug></jvm.args.debug>
         <ipv6.server.jvm.args>-Djboss.bind.address=[::1] -Djboss.bind.address.management=[::1] -Djboss.bind.address.unsecure=[::1] -Djava.net.preferIPv4Stack=false -Djava.net.preferIPv6Addresses=true</ipv6.server.jvm.args>
 
